Sección 11 terminada - CRUD - Imágenes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend-server",
     "version": "1.0.0",
-    "description": "Servidor backend del curso de Angular avanzado",
+    "description": "Servidor backend de Angular avanzado",
     "main": "index.js",
     "scripts": {
         "start": "nodemon app.js",
@@ -13,9 +13,11 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "express": "^4.16.3",
+        "express-fileupload": "^0.4.0",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.10",
-        "mongoose-unique-validator": "^2.0.1"
+        "mongoose-unique-validator": "^2.0.1",
+        "serve-index": "^1.9.1"
     },
     "devDependencies": {
         "nodemon": "^1.18.4"
